# zs-interface

./: .gitignore  CMakeLists.txt  README.md  project_info.in
doc/: CMakeLists.txt  build.md  changes.md  codingstyle.md  design.md  doc.md  example.md  faq.md  license_header.txt
zs/interface/: InterfaceExport.hpp
zs/interface/details/: Py.cpp  Py.hpp  PyHelper.cpp  PyHelper.hpp
zs/interface/world/: CommandInterface.hpp  NodeDescriptor.hpp  NodeInterface.cpp  NodeInterface.hpp  ObjectInterface.cpp  ObjectInterface.hpp
zs/interface/world/value_type/: BuiltinObjects.cpp  ValueCApis.cpp  ValueInterface.cpp  ValueInterface.hpp
